<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dlsvMain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="80dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_customdialog"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dlbtnSimpleDialog"
            style="@style/commonButtonStyle"
            android:text="@string/dl_simple_dialog" />

        <Button
            android:id="@+id/dlbtnBorderDialog"
            style="@style/commonButtonStyle"
            android:text="@string/dl_border_dialog" />

        <Button
            android:id="@+id/dlbtnRoundeCornerDialog"
            style="@style/commonButtonStyle"
            android:text="@string/dl_roundcorner_dialog" />

        <Button
            android:id="@+id/dlbtnRoundeCornerBorderDialog"
            style="@style/commonButtonStyle"
            android:text="@string/dl_roundcorner_border_dialog" />
    </LinearLayout>

</ScrollView>